<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaCustomizationActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="159dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Order ID : " />

                <TextView
                    android:id="@+id/txtID"
                    android:layout_width="104dp"
                    android:layout_height="56dp"
                    tools:text="Order ID" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Max 7 Toppings" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPizzaType"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <Spinner
                    android:id="@+id/cbSize"
                    android:layout_width="126dp"
                    android:layout_height="77dp"
                    android:spinnerMode="dropdown"
                    tools:listheader="Size" />

                <ImageView
                    android:id="@+id/pizzaView"
                    android:layout_width="match_parent"
                    android:layout_height="466dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbPEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/pepperoni" />

                <CheckBox
                    android:id="@+id/cbEXC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/extraCheese" />

                <CheckBox
                    android:id="@+id/cbBAC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/bacon" />

                <CheckBox
                    android:id="@+id/cbJAL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/jalapeno" />

                <CheckBox
                    android:id="@+id/cbONI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/onion" />

                <CheckBox
                    android:id="@+id/cbCHC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/chicken" />

                <CheckBox
                    android:id="@+id/cbSAS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/sausage" />

                <CheckBox
                    android:id="@+id/cbPPR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/peppers" />

                <CheckBox
                    android:id="@+id/cbBRO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/broccoli" />

                <CheckBox
                    android:id="@+id/cbRIC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/ricotta" />

                <CheckBox
                    android:id="@+id/cbPIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updateToppings"
                    android:text="@string/pineapple" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addToOrder"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnAddtoOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addToOrder"
                    android:text="Add to Order" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Subtotal : " />

                <TextView
                    android:id="@+id/txtSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Subtotal" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="96dp" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>